Even more PMD errors removed